force-app/main/default/objects/MessageHistory__c/MessageHistory__c.object-meta.xml
<CustomObject>
    <description>Keep the conversation history</description>
    <label>MessageHistory</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MessageHistories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>