force-app/main/default/objects/MessageHistory__c/fields/AiMessage__c.field-meta.xml
<CustomField>
    <fullName>AiMessage__c</fullName>
    <label>AiMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>