force-app/main/default/objects/MessageHistory__c/fields/EinsteinGPTConfig__c.field-meta.xml
<CustomField>
    <fullName>EinsteinGPTConfig__c</fullName>
    <label>EinsteinGPTConfig</label>
    <referenceTo>EinsteinGPTConfig__c</referenceTo>
    <relationshipLabel>MessageHistories</relationshipLabel>
    <relationshipName>MessageHistories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>