force-app/main/default/objects/MessageHistory__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <referenceTo>Scenario__c</referenceTo>
    <relationshipLabel>MessageHistories</relationshipLabel>
    <relationshipName>MessageHistories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>