force-app/main/default/objects/MessageHistory__c/fields/UserMessage__c.field-meta.xml
<CustomField>
    <fullName>UserMessage__c</fullName>
    <label>UserMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>